* Change cruisecontrol.sh to check cc.pid and kill the start if the cc.pid is an active cruisecontrol instance that is already running (CC-1009). Patch by John Patrick.
* Update MX4J to version 3.0.2.
* Add ability to connect remote debugger - see: .ant-scripts/build-properties.xml -> remoteDebugJVMArgs
* Add new systemd service configuration - see: documentation/main/install.html

build loop
======================
* Fix error in Builder.getBuildOutputConsumer() when live output is enabled and the project name contained a slash.
* StreamPumper changed to work with both text and binary data (CC-991). Patch by Daniel Tihelka.
* Fix FileResolver/ResolverUser to detect and re-read changed property files (CC-1043). Patch by Daniel Tihelka. 
* Configure environment variables in Builder (currently Ant, Maven2, and Exec) configuration (CC-1026). Patch by Daniel Tihelka.

Plugin
----------------------
* Adds from="" attribute simplifying the pre-configuration of plugins interrited from the default CC tags

PipedExecBuilder
----------------------
* Fix memory usage and logging volume issues with PipedExecBuilder (CC-991). Patch by Daniel Tihelka.
* Add support for gzipstdout and binarystdout to PipedExecBuilder (CC-991). Patch by Daniel Tihelka.

EmailPublisher
----------------------
* Include label in subject of build failure email (CC-1022). Patch by Quinn Styl.

Dashboard
======================
* Fix build error in Dashboard on MacOSX due to java.io.tempdir name when converted to URI. (CC-976)
* Add missing icon image for "unknown" modification type (CC-799). Reported by John Prause.

 contrib
======================

distributed
----------------------
* Add BuildAgent Host Name info into remote build results, similar to how CompositeBuilder inserts child builder info.

documentation
======================
* Include main javadocs in website, as they are referenced from project docs, eg: main/plugins.html. Reported by Pavel Krusina.


CruiseControl Release Notes - 2.8.4
