@@ -38,10 +38,20 @@ package net.sourceforge.cruisecontrol.util;
 
 import junit.framework.TestCase;
 import net.sourceforge.cruisecontrol.CruiseControlException;
+import net.sourceforge.cruisecontrol.Project;
+import net.sourceforge.cruisecontrol.ProjectConfig;
+import net.sourceforge.cruisecontrol.config.XMLConfigManager;
 
 import java.io.File;
 import java.io.IOException;
 import java.util.Properties;
+
+import org.jdom.Element;
+import org.jdom.JDOMException;
+import org.jdom.output.Format;
+import org.jdom.output.XMLOutputter;
+import org.jdom.xpath.XPath;
+import org.xml.sax.SAXException;
 
 public class UtilTest extends TestCase {
 
@@ -94,4 +104,47 @@ public class UtilTest extends TestCase {
         assertEquals("value1", properties.getProperty("stored1"));
         assertEquals("value2", properties.getProperty("stored2"));
     }
+
+    @SuppressWarnings("unused")
+    public void testLoadRootElement_xinclude() throws CruiseControlException,
+    IOException, SAXException, JDOMException {
+        File file1 = File.createTempFile("file1", ".xml");
+        file1.deleteOnExit();
+        StringBuffer xml1 = new StringBuffer();
+        xml1.append("<?xml version='1.0'?>\n");
+        xml1.append("<!DOCTYPE data [");
+        xml1.append("<!ELEMENT data (property,plugin)>\n");
+        xml1.append("<!ATTLIST property id ID #REQUIRED>\n");
+        xml1.append("<!ATTLIST plugin   id ID #REQUIRED>\n");
+        xml1.append("]>\n");
+        xml1.append("<data id=''>\n");
+        xml1.append("<property name='p1' value='v1' id='prop'/>\n");
+        xml1.append("<property name='p2' value='v2' id='prop'/>\n");
+        xml1.append("<plugin name='schedule' timeout='60' id='sched'/>\n");
+        xml1.append("</data>\n");
+        IO.write(file1, xml1.toString());
+
+        File file2 = File.createTempFile("file2", ".xml");
+        file2.deleteOnExit();
+        StringBuffer xml2 = new StringBuffer();
+        xml2.append("<?xml version='1.0'?>\n");
+        xml2.append("<cruisecontrol>\n");
+        xml2.append("<xi:include xmlns:xi='http://www.w3.org/2001/XInclude' href='" + file1.getPath() + "' xpointer='element(prop)'/>\n");
+        xml2.append("<xi:include xmlns:xi='http://www.w3.org/2001/XInclude' href='" + file1.getPath() + "' xpointer='element(sched)'/>\n");
+        xml2.append("<project name='pr'>\n");
+        xml2.append("</project>\n");
+        xml2.append("</cruisecontrol>\n");
+        IO.write(file2, xml2.toString());
+
+        // Read and test
+        Element test = Util.loadRootElement(file2);
+
+        assertNotNull(XPath.newInstance("/cruisecontrol/property[@name='p1' and @value='v1']").selectSingleNode(test));
+        assertNotNull(XPath.newInstance("/cruisecontrol/property[@name='p2' and @value='v2']").selectSingleNode(test));
+        assertNotNull(XPath.newInstance("/cruisecontrol/plugin[@name='schedule']").selectSingleNode(test));
+
+        // For debug printing ...
+        //String xmlString = (new XMLOutputter(Format.getPrettyFormat())).outputString(test);
+        //System.out.println(xmlString);
+     }
 }
